[package]
name = "simple_ansi"
version = "0.1.0"
edition = "2021"
authors = ["xcodz-dot"]
description = "A Simple ANSI library without color sequences"
readme = "README.md"
homepage = "https://github.com/xcodz-dot/simple_ansi"
repository = "https://github.com/xcodz-dot/simple_ansi"
license = "MIT"
license-file = "LICENSE"
keywords = ["ansi", "graphics", "simple", "terminal", "cursor"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
